force-app/main/default/objects/Agency__c/fields/Add_Permit__c.field-meta.xml
<CustomField>
    <fullName>Add_Permit__c</fullName>
    <label>Add Permit</label>
    <type>Url</type>
</CustomField>