force-app/main/default/objects/Agency__c/fields/Agency_Description__c.field-meta.xml
<CustomField>
    <fullName>Agency_Description__c</fullName>
    <label>Agency Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>