force-app/main/default/objects/Agency__c/fields/Permit_records__c.field-meta.xml
<CustomField>
    <fullName>Permit_records__c</fullName>
    <label>Permit records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>