force-app/main/default/objects/Agency__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <label>Record ID#</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>